--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "box2dweb": "^2.1.0-b"
   },
   "devDependencies": {
+    "babel-runtime": "^5.8.9",
     "babelify": "^6.1.3",
     "browserify": "^11.0.0"
   }
