--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Graphics engine for building cross-platform games and applications.",
   "main": "src/Application.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build:debug": "node tasks/build_debug.js"
+    "test": "node node_modules/karma/bin/karma start"
   },
   "repository": {
     "type": "git",
@@ -24,11 +23,19 @@
   },
   "homepage": "https://github.com/JTJustCodes/astrid#readme",
   "dependencies": {
-    "box2dweb": "^2.1.0-b"
+    "box2dweb": "^2.1.0"
   },
   "devDependencies": {
-    "babel-runtime": "^5.8.9",
-    "babelify": "^6.1.3",
-    "browserify": "^11.0.0"
+    "babel-preset-es2015-loose": "^6.1.3",
+    "babelify": "^7.2.0",
+    "browserify": "^11.2.0",
+    "karma": "^0.13.15",
+    "karma-babel-preprocessor": "^6.0.1",
+    "karma-browserify": "^4.4.2",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-mocha": "^0.2.1",
+    "karma-mocha-reporter": "^1.1.3",
+    "karma-requirejs": "^0.2.2",
+    "karma-should": "^1.0.0"
   }
 }
